--- a/index.html
+++ b/index.html
@@ -45,20 +45,14 @@
   <div id="status" class="mt-3"></div>
 </div>
 
-<a href="jobs.html">
-  <button style="
-    padding: 12px 20px;
-    background-color: #0070f3;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 20px;
-  ">
-    🔍 Show Available Jobs
-  </button>
-</a>
+<div style="text-align: center; margin-top: 40px;">
+  <a href="jobs.html">
+    <button style="padding: 12px 20px; background-color: #0070f3; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 16px;">
+      🔍 Show Available Jobs
+    </button>
+  </a>
+</div>
+
 
 
 <script>
