--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       <input type="text" name="title" class="form-control" required />
     </div>
     <div class="mb-3">
+      <label class="form-label">Company Name</label>
+      <input type="text" name="company" class="form-control" required />
+    </div>
+    <div class="mb-3">
       <label class="form-label">Job Description</label>
       <textarea name="description" class="form-control" rows="4" required></textarea>
     </div>
@@ -52,8 +56,6 @@
     </button>
   </a>
 </div>
-
-
 
 <script>
   document.getElementById('jobForm').addEventListener('submit', async (e) => {
