--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
 </div>
 
 <script>
+  const WEBHOOK_URL = import.meta.env.N8N_WEBHOOK_URL
   document.getElementById('jobForm').addEventListener('submit', async (e) => {
     e.preventDefault();
     const formData = new FormData(e.target);
     const data = Object.fromEntries(formData.entries());
 
-    const res = await fetch("https://kanak-mi.app.n8n.cloud/webhook-test/fc6f2a95-8579-49ca-a401-7767ca6882c3", {
+    const res = await fetch(WEBHOOK_URL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify(data)
